# abi

./: .ci-trigger  .cursorrules  .dockerignore  .env.example  .gitguardian.yaml  .gitignore  .ignore  AGENTS.md  AUDIT.md  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  Dockerfile.linux.x86_64  Dockerfile.mcp  Dockerfile.prod  ISSUE.md  LICENSE  MCP_SERVER_TESTING.md  Makefile  OPENAI_API_IMPLEMENTATION.md  PR_DOCUMENTATION.md  Pyvis_Vizualise_ABI_network.ipynb  README.md  RFC-in-app-coding-workspaces.md  __pipeline__.ipynb  abi_mcp_server.py  bandit.yaml  chat  chat-example.md  cli  conda.yml  config.dev.yaml  config.local.yaml  config.max.yaml  config.remote.yaml  config.secret.template.yml  config.template.yml  config.yaml  config.yaml.example  config.yml  (+26 more)
lib/: README.md  pyproject.toml
lib/abi/: __init__.py  cli.py
lib/abi/apps/api/: api.py  api_test.py
lib/abi/apps/mcp/: mcp_server.py
lib/abi/apps/terminal_agent/: main.py  terminal_style.py
lib/abi/cli/: __init__.py  agent.py  chat.py  config.py  init.py  module.py  secret.py
lib/abi/engine/: Engine.py  EngineProxy.py  Engine_test.py  IEngine.py  conftest.py
lib/abi/engine/engine_configuration/: EngineConfiguration.py  EngineConfiguration_GenericLoader.py  EngineConfiguration_ObjectStorageService.py  EngineConfiguration_ObjectStorageService_test.py  EngineConfiguration_SecretService.py  EngineConfiguration_TripleStoreService.py  EngineConfiguration_VectorStoreService.py  EngineConfiguration_test.py
lib/abi/engine/engine_loaders/: EngineModuleLoader.py  EngineOntologyLoader.py  EngineServiceLoader.py
lib/abi/integration/: __init__.py  integration.py
lib/abi/models/: DockerModelRunnerChat.py  DockerModelRunnerEmbeddings.py  Model.py  OpenRouter.py  OpenRouter_test.py
lib/abi/module/: Module.py  ModuleAgentLoader.py  ModuleUtils.py
lib/abi/pipeline/: __init__.py  pipeline.py
lib/abi/services/: main.py  ontology_validator.py
lib/abi/services/agent/: Agent.py  AgentMemory_test.py  Agent_test.py  IntentAgent.py  IntentAgent_test.py  OpenRouter.py  OpenRouter_test.py  test_agent_memory.py  test_postgres_integration.py
lib/abi/services/api/: main.py
lib/abi/services/cache/: CacheFactory.py  CachePort.py  CacheService.py  CacheService_test.py
lib/abi/services/object_storage/: ObjectStorageFactory.py  ObjectStoragePort.py  ObjectStorageService.py
lib/abi/services/ontology/: OntologyService.py
lib/abi/services/ontology_processor/: OntologyService.py  __init__.py  adapters.py  ports.py
lib/abi/services/ontology_store/: OntologyFactory.py  OntologyPorts.py  OntologyStorePorts.py  OntologyStoreService.py
lib/abi/services/process_router/: ProcessRouter.py  __init__.py  process_mapping.py
lib/abi/services/reasoner/: ReasonerFactory.py  ReasonerPorts.py  ReasonerService.py  __init__.py
lib/abi/services/secret/: Secret.py  SecretPorts.py  Secret_test.py
lib/abi/services/storage/: aws-s3.md
lib/abi/services/triple_store/: TripleStoreFactory.py  TripleStorePorts.py  TripleStoreService.py
lib/abi/services/vector_store/: IVectorStorePort.py  IVectorStorePort_test.py  VectorStoreFactory.py  VectorStoreService.py  VectorStoreService_test.py  __init__.py
lib/abi/utils/: ConsolidateOntology.py  Expose.py  Graph.py  JSON.py  LazyLoader.py  Logger.py  Module.py  OntologyReasoner.py  OntologyYaml.py  SPARQL.py  Storage.py  StorageUtils.py  String.py  Workers.py
lib/abi/utils/abi/: ontology.py
lib/abi/utils/onto2py/: __init__.py  onto2py.py
lib/abi/utils/ttl2py/: __init__.py  __main__.py  ttl2py.py
lib/abi/workflow/: __init__.py  workflow.py
lib/src/data/ontology-store/: test.ttl
libs/naas-abi/: CHANGELOG.md  README.md  pyproject.toml
libs/naas-abi-core/: CHANGELOG.md  README.md  pyproject.toml
libs/naas-abi-core/naas_abi_core/: __init__.py
libs/naas-abi-core/naas_abi_core/branching/: __init__.py  context.py  context_test.py  conventions.py  exceptions.py  executor.py  executor_test.py  logging.py  logging_test.py  no_raw_threadpool_test.py  tracing.py  tracing_test.py
libs/naas-abi-core/naas_abi_core/cli/: __init__.py  agent.py  chat.py  config.py  deploy.py  init.py  module.py  new.py  secret.py
libs/naas-abi-core/naas_abi_core/engine/: Engine.py  EngineProxy.py  EngineProxy_test.py  Engine_test.py  IEngine.py  conftest.py  context.py  context_test.py
libs/naas-abi-core/naas_abi_core/integration/: __init__.py
libs/naas-abi-core/naas_abi_core/models/: Model.py  OpenRouter.py  OpenRouter_test.py
libs/naas-abi-core/naas_abi_core/module/: Module.py  ModuleAgentLoader.py  ModuleModelLoader.py  ModuleModelLoader_test.py  ModuleOrchestrationLoader.py
libs/naas-abi-core/naas_abi_core/orchestrations/: DagsterOrchestration.py  Orchestrations.py
libs/naas-abi-core/naas_abi_core/pipeline/: __init__.py  pipeline.py
libs/naas-abi-core/naas_abi_core/services/: ServiceBase.py
libs/naas-abi-core/naas_abi_core/tests/: test_services_imports.py
libs/naas-abi-core/naas_abi_core/utils/: Expose.py  Graph.py  JSON.py  LazyLoader.py  Logger.py  OntologyYaml.disabled.py  OntologyYaml.py  SPARQL.py  Storage.py  StorageUtils.py  String.py  Workers.py  ontology_checker.py  validate_bfo_ontology.py
libs/naas-abi-core/naas_abi_core/workflow/: __init__.py  workflow.py
libs/naas-abi-marketplace/: AGENTS.md  CHANGELOG.md  README.md  marketplace.py  pyproject.toml
libs/naas-abi-marketplace/naas_abi_marketplace/ai/: AGENTS.md
libs/naas-abi-marketplace/naas_abi_marketplace/applications/: AGENTS.md
libs/naas-abi-marketplace/naas_abi_marketplace/domains/: AGENTS.md
libs/naas-abi-platform/: README.md  pyproject.toml
libs/naas-abi-platform/naas_abi_platform/: __init__.py  cli.py  cli_test.py
libs/naas-abi/naas_abi/: ABIModule_test.py  __init__.py  cli.py  triggers.py
libs/naas-abi/naas_abi/agents/: AbiAgent.py  AbiAgent_test.py  CodingAgent.py  CodingAgent_test.py  EntitytoSPARQLAgent.py  EntitytoSPARQLAgent_test.py  KnowledgeGraphBuilderAgent.py  OntologyEngineerAgent.py  (+3 more)
libs/naas-aia/: Modelfile.aia  README.md  pyproject.toml
libs/naas-aia/naas_aia/: SOUL.md  __init__.py  api.py  cli.py
(+15759 files in other folders)
