[tool.poetry]
name = "src"
version = "0.1.0"
description = "AI system"
authors = ["AI Team <aiteam@company.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
abi = {path = "./lib", develop = true, extras = ["all"]} 
requests = "^2.32.3"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
replicate = "^1.0.4"
pydash = "^8.0.4"
pandas = "^2.2.3"
click = "^8.1.7"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
boto3 = "^1.35.82"
google = "^3.0.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.155.0"
google-analytics-data = "^0.18.16"
psycopg2-binary = "^2.9.10"
supabase = "^2.10.0"
yfinance = "^0.2.50"
algoliasearch = "^4.11.1"
google-cloud-bigquery = "^3.27.0"
google-cloud-functions = "^1.19.0"
google-cloud-storage = "^2.19.0"
plotly = "^5.24.1"
rich = "^13.9.4"
pillow = "^11.0.0"
kaleido = "0.2.1"
matplotlib = "^3.7.1"
seaborn = "^0.13.2"
gitpython = "^3.1.43"
openpyxl = "^3.1.5"
python-multipart = "^0.0.20"
wordcloud = "^1.9.4"
imapclient = "^3.0.1"
pynacl = "^1.5.0"

[tool.poetry.group.terminal-agent.dependencies]
langchain-anthropic = "^0.3.0"
langchain-openai = "^0.2.9"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[tool.poetry.scripts]
# Foundation agents
chat-supervisor-agent = "src.apps.terminal_agent.main:run_supervisor_agent"
chat-support-agent = "src.apps.terminal_agent.main:run_support_agent"

# Domain agents
chat-content-agent = "src.apps.terminal_agent.main:run_content_agent"
chat-finance-agent = "src.apps.terminal_agent.main:run_finance_agent"
chat-growth-agent = "src.apps.terminal_agent.main:run_growth_agent"
chat-opendata-agent = "src.apps.terminal_agent.main:run_opendata_agent"
chat-operations-agent = "src.apps.terminal_agent.main:run_operations_agent"
chat-sales-agent = "src.apps.terminal_agent.main:run_sales_agent"

# Integration agents
chat-airtable-agent = "src.apps.terminal_agent.main:run_airtable_agent"
chat-algolia-agent = "src.apps.terminal_agent.main:run_algolia_agent"
chat-aws-s3-agent = "src.apps.terminal_agent.main:run_aws_s3_agent"
chat-clockify-agent = "src.apps.terminal_agent.main:run_clockify_agent"
chat-discord-agent = "src.apps.terminal_agent.main:run_discord_agent"
chat-github-agent = "src.apps.terminal_agent.main:run_github_agent"
chat-gladia-agent = "src.apps.terminal_agent.main:run_gladia_agent"
chat-gmail-agent = "src.apps.terminal_agent.main:run_gmail_agent"
chat-google-analytics-agent = "src.apps.terminal_agent.main:run_google_analytics_agent"
chat-google-calendar-agent = "src.apps.terminal_agent.main:run_google_calendar_agent"
chat-google-drive-agent = "src.apps.terminal_agent.main:run_google_drive_agent"
chat-google-sheets-agent = "src.apps.terminal_agent.main:run_google_sheets_agent"
chat-harvest-agent = "src.apps.terminal_agent.main:run_harvest_agent"
chat-hubspot-agent = "src.apps.terminal_agent.main:run_hubspot_agent"
chat-linkedin-agent = "src.apps.terminal_agent.main:run_linkedin_agent"
chat-naas-agent = "src.apps.terminal_agent.main:run_naas_agent"
chat-news-api-agent = "src.apps.terminal_agent.main:run_news_api_agent"
chat-notion-agent = "src.apps.terminal_agent.main:run_notion_agent"
chat-onedrive-agent = "src.apps.terminal_agent.main:run_onedrive_agent"
chat-pennylane-agent = "src.apps.terminal_agent.main:run_pennylane_agent"
chat-pipedrive-agent = "src.apps.terminal_agent.main:run_pipedrive_agent"
chat-postgres-agent = "src.apps.terminal_agent.main:run_postgres_agent"
chat-qonto-agent = "src.apps.terminal_agent.main:run_qonto_agent"
chat-serper-agent = "src.apps.terminal_agent.main:run_serper_agent"
chat-slack-agent = "src.apps.terminal_agent.main:run_slack_agent"
chat-stripe-agent = "src.apps.terminal_agent.main:run_stripe_agent"
chat-supabase-agent = "src.apps.terminal_agent.main:run_supabase_agent"
chat-yahoo-finance-agent = "src.apps.terminal_agent.main:run_yahoo_finance_agent"
chat-youtube-agent = "src.apps.terminal_agent.main:run_youtube_agent"
chat-zerobounce-agent = "src.apps.terminal_agent.main:run_zerobounce_agent"
chat-sendgrid-agent = "src.apps.terminal_agent.main:run_sendgrid_agent"
chat-mailchimp-agent = "src.apps.terminal_agent.main:run_mailchimp_agent"
chat-mercury-agent = "src.apps.terminal_agent.main:run_mercury_agent"
chat-agicap-agent = "src.apps.terminal_agent.main:run_agicap_agent"
chat-brevo-agent = "src.apps.terminal_agent.main:run_brevo_agent"
chat-whatsapp-agent = "src.apps.terminal_agent.main:run_whatsapp_agent"
chat-instagram-agent = "src.apps.terminal_agent.main:run_instagram_agent"
chat-glassdoor-agent = "src.apps.terminal_agent.main:run_glassdoor_agent"

# Analytics agents
chat-plotly-agent = "src.apps.terminal_agent.main:run_plotly_agent"
chat-matplotlib-agent = "src.apps.terminal_agent.main:run_matplotlib_agent"
abi = "src.cli:main"
api = "src.api:api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"