[project]
name = "src"
version = "0.1.0"
description = "AI system"
authors = [{ name = "AI Team", email = "aiteam@company.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    # "pyyaml>=6.0.1,<7",
    "naas-abi",
    "naas-abi-core[all]",
    "naas-abi-marketplace[ai-chatgpt]",
    "naas-abi-marketplace[ai-claude]",
    "naas-abi-marketplace[ai-gemini]",
    "naas-abi-marketplace[ai-grok]",
    "naas-abi-marketplace[ai-mistral]",
    "naas-abi-marketplace[ai-perplexity]",
    "naas-abi-marketplace[applications-algolia]",
    "naas-abi-marketplace[applications-arxiv]",
    "naas-abi-marketplace[applications-googlesearch]",
    "naas-abi-marketplace[applications-linkedin]",
    "naas-abi-marketplace[applications-powerpoint]",
    "naas-abi-marketplace[applications-yahoofinance]",
    # "requests[socks]>=2.32.3,<3",
    # "fastapi>=0.115.5,<0.116",
    # "uvicorn[standard]>=0.32.1,<0.33",
    # "replicate>=1.0.4,<2",
    # "pydash>=8.0.4,<9",
    # "pandas>=2.2.3,<3",
    # "click>=8.1.0,<8.2",
    # "jwt>=1.3.1,<2",
    # "pyjwt>=2.10.1,<3",
    # "boto3>=1.38.19,<2",
    # "google>=3.0.0,<4",
    # "google-auth-oauthlib>=1.2.1,<2",
    # "google-api-python-client>=2.155.0,<3",
    # "google-analytics-data>=0.18.16,<0.19",
    # "psycopg2-binary>=2.9.10,<3",
    # "supabase>=2.10.0,<3",
    # "yfinance>=0.2.50,<0.3",
    # "algoliasearch>=4.11.1,<5",
    # "google-cloud-bigquery>=3.27.0,<4",
    # "google-cloud-functions>=1.19.0,<2",
    # "google-cloud-storage>=2.19.0,<3",
    # "plotly>=5.24.1,<6",
    # "rich>=13.9.4,<14",
    # "pillow>=11.0.0,<12",
    # "matplotlib>=3.7.1,<4",
    # "seaborn>=0.13.2,<0.14",
    # "gitpython>=3.1.43,<4",
    # "openpyxl>=3.1.5,<4",
    # "python-multipart>=0.0.20,<0.0.21",
    # # "wordcloud>=1.9.4,<2",  # Temporarily disabled due to missing Python.h
    # "imapclient>=3.0.1,<4",
    # "pynacl>=1.5.0,<2",
    # "arxiv>=2.1.3,<3",
    # "jinja2>=3.1.6,<4",
    # "types-requests>=2.31.0.6",
    # "pyperclip>=1.9.0",
    # "streamlit>=1.45.1",
    # "pydantic>=2.11.4",
    # "watchdog>=6.0.0",
    # "langchain-google-genai>=2.1.4",
    # "feedparser>=6.0.11",
    # "thefuzz>=0.22.1",
    # "ollama>=0.5.1",
    # "langchain-ollama>=0.3.4",
    # "httpx>=0.28.0,<0.29",
    # "python-dotenv>=1.0.0,<2",
    # "fastmcp>=2.11.2",
    # "langchain-anthropic>=0.3.17",
    # "langchain-mistralai>=0.2.11",
    # "langchain-xai>=0.2.5",
    # "google-genai>=1.28.0",
    # "psycopg[binary,pool]>=3.2.9",
    # "langgraph-checkpoint-postgres>=2.0.23",
    # "mypy>=1.17.1",
    # "qdrant-client>=1.7.0",
    # "numpy>=1.24.0",
    # "langchain-perplexity>=0.1.2",
    # "pdfplumber>=0.11.7",
    # "dagster>=1.11.12",
    # "dagster-webserver>=1.11.12",
    # "dagster-postgres>=0.27.12",
    # "dagster-aws>=0.27.12",
    # "ratelimit>=2.2.1",
    # "yahooquery>=2.4.1",
    # "bodo>=2025.10",
    # "pandas-stubs>=2.3.2.250926",
    # "types-pyyaml>=6.0.12.20250915",
    # "types-psycopg2>=2.9.21.20251012",
    "openai>=1.109.1",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
cli = "naas_abi_core.cli:main"
#abi = "src.cli:main"
api = "naas_abi_core.apps.api.api:api"
mcp-server = "naas_abi_core.apps.mcp_server:run"
chat-arxiv-agent = "naas_abi_core.apps.terminal_agent.main:run_arxiv_agent"

[dependency-groups]
terminal-agent = [
    "langchain-anthropic>=0.3.0,<0.4",
    "langchain-openai>=0.3.3,<0.4",
    "rich>=13.9.4,<14",
]
dev = [
    "pytest>=8.3.4,<9",
    "mypy>=1.15.0",
    "pyrefly>=0.16.1",
    "pytest-xdist>=3.7.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.10.7",
    "coverage-badge>=1.1.2",
]




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.uv.sources]
naas-abi = { path = "libs/naas-abi" , editable = true }
naas-abi-core = { path = "libs/naas-abi-core" , editable = true }
naas-abi-marketplace = { path = "libs/naas-abi-marketplace" , editable = true }


