[project]
name = "abi"
version = "0.1.0"
description = "Abi framework allowing you to build your AI system."
authors = [{ name = "Maxime Jublou", email = "maxime@naas.ai" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "rdflib>=7.1.1,<8",
    "langgraph>=0.2.53,<0.3",
    "loguru>=0.7.2,<0.8",
    "sse-starlette>=2.1.3,<3",
    "boto3>=1.36.11,<2",
    "langchain-openai>=0.3.3,<0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
