[project]
name = "abi"
version = "0.1.0"
description = "Abi framework allowing you to build your AI system."
authors = [{ name = "Maxime Jublou", email = "maxime@naas.ai" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "rdflib>=7.1.1,<8",
    "langgraph>=0.4.5",
    "loguru>=0.7.2,<0.8",
    "sse-starlette>=2.1.3,<3",
    "boto3>=1.38.19,<2",
    "langchain-openai>=0.3.3,<0.4",
    "sparqlwrapper>=2.0.0",
    "click>=8.2.1",
]

[project.optional-dependencies]
ssh = [
    "paramiko>=3.5.1",
    "sshtunnel>=0.4.0",
]

[project.scripts]
abi = "abi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
