[project]
name = "abi"
version = "0.1.0"
description = "Abi framework allowing you to build your AI system."
authors = [{ name = "Maxime Jublou", email = "maxime@naas.ai" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "rdflib>=7.1.1,<8",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg[binary,pool]>=3.0.0",
    "loguru>=0.7.2,<0.8",
    "sse-starlette>=2.1.3,<3",
    "boto3>=1.38.19,<2",
    "langchain-openai>=0.3.3,<0.4",
    "sparqlwrapper>=2.0.0",
    "click>=8.1.1,<8.2",
    "qdrant-client>=1.14.3",
    "spacy>=3.8.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pip>=25.1.1",
    "pydantic>=2.11.5"
]

[project.optional-dependencies]
ssh = [
    "paramiko>=3.5.1,<4.0.0",
    "sshtunnel>=0.4.0",
]

[project.scripts]
abi = "abi.cli:main"
ttl2py = "abi.utils.ttl2py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true