[project]
name = "naas-abi-core"
version = "1.1.2"
description = "Abi framework allowing you to build your AI system."
authors = [{ name = "Maxime Jublou", email = "maxime@naas.ai" },{ name = "Florent Ravenel", email = "florent@naas.ai" }, { name = "Jeremy Ravenel", email = "jeremy@naas.ai" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "rdflib>=7.1.1,<8",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.21",
    "fastapi>=0.115.5,<0.116",
    "psycopg[binary,pool]>=3.0.0",
    "loguru>=0.7.2,<0.8",
    "sse-starlette>=2.1.3,<3",
    "langchain-openai>=0.3.3,<0.4",
    "sparqlwrapper>=2.0.0",
    "click>=8.1.1,<8.2",
    "spacy>=3.8.7",
    # "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pip>=25.1.1",
    "pydantic>=2.11.5",
    "dotenv>=0.9.9",
    "pydash>=8.0.5",
    "starlette>=0.46.2",
    "rich>=13.9.4,<14",
    "types-tqdm>=4.67.0.20250809",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "pandas-stubs>=2.3.2.250926",
    "fastmcp>=2.13.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "docker>=7.1.0",
]

[project.optional-dependencies]
ssh = [
    "paramiko>=3.5.1,<4.0.0",
    "sshtunnel>=0.4.0",
]
aws = [
    "boto3>=1.38.19,<2",
]
qdrant = [
    "qdrant-client>=1.14.3",
]

all = [
    "naas-abi-core[ssh]",
    "naas-abi-core[aws]",
    "naas-abi-core[qdrant]",
    "naas-abi-core[openrouter]",
]
openrouter = [
    "langchain-openai>=0.3.35",
]
[project.scripts]
onto2py = "naas_abi_core.utils.onto2py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "python-semantic-release>=9.21.0",
]

[tool.semantic_release]
commit_parser = "conventional-monorepo"
commit_message = """\
chore(release): naas-abi-core@{version}`

Automatically generated by python-semantic-release
"""
tag_format = "naas-abi-core-v{version}"
version_toml = ["pyproject.toml:project.version"]
build_command = """
    python -m pip install uv>=0.9.13
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.commit_parser_options]
path_filters = ["."]
# scope_prefix = "naas-abi-core-"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "^dev"
prerelease = true
prerelease_token = "dev"

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"

[tool.hatch.build.targets.sdist.force-include]
"assets" = "assets"
