[project]
name = "naas-abi-platform"
version = "0.1.0"
description = "Thin workspace client for the ABI platform data services (object storage, ...)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "httpx>=0.26",
]

[project.scripts]
abi-platform = "naas_abi_platform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["naas_abi_platform"]
