[project]
name = "naas-abi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "naas-abi-core",
    "naas-abi-marketplace",
]

[tool.uv.sources]
naas-abi-core = { path = "../naas-abi-core", editable = true }
naas-abi-marketplace = { path = "../naas-abi-marketplace", editable = true }
