[project]
name = "naas-abi"
version = "1.7.12"
description = "Multi-agent orchestrator and knowledge graph management system for AI orchestration, providing comprehensive coordination of specialized AI agents and semantic data management capabilities"
readme = "README.md"
authors = [{ name = "Maxime Jublou", email = "maxime@naas.ai" },{ name = "Florent Ravenel", email = "florent@naas.ai" }, { name = "Jeremy Ravenel", email = "jeremy@naas.ai" }]
requires-python = ">=3.10,<4"
dependencies = [
    "naas-abi-core[dagster]>=1.4.0",
    "naas-abi-marketplace>=1.3.3",
    # --- Nexus API runtime dependencies ---
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
    "tiktoken>=0.5.0",
    "boto3>=1.34.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "PyYAML",
    "python-socketio>=5.16.1",
    "thefuzz>=0.22.1",
]
license = { text = "MIT License" }

[project.urls]
Homepage = "https://github.com/jupyter-naas/abi"
Repository = "https://github.com/jupyter-naas/abi/tree/main/libs/naas-abi"

[tool.uv.sources]
naas-abi-core = { path = "../naas-abi-core", editable = true }
naas-abi-marketplace = { path = "../naas-abi-marketplace", editable = true }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
naas_abi = [
    "apps/nexus/apps/api/migrations/*.sql",
    "apps/nexus/apps/api/public/**/*",
    "apps/nexus/ontology/**/*",
    "apps/nexus/demo/**/*",
]


[tool.semantic_release]
commit_parser = "conventional-monorepo"
commit_message = """\
chore(release): naas-abi@{version}`

Automatically generated by python-semantic-release
"""
tag_format = "naas-abi-v{version}"
version_toml = ["pyproject.toml:project.version"]
build_command = """
    python -m pip install uv>=0.9.13
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.commit_parser_options]
path_filters = ["."]
# scope_prefix = "naas-abi-"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "^dev"
prerelease = true
prerelease_token = "dev"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "python-semantic-release>=9.21.0",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = "../naas-abi-marketplace"
