[project]
name = "naas-aia"
version = "0.1.0"
description = "AIA - Local AI assistant: SOUL identity + DuckDuckGo search."
authors = [{ name = "NaasAI", email = "aiteam@naas.ai" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "click>=8.1.0",
    "ddgs>=9.0.0",
    "ollama>=0.3.0",
]
license = { text = "MIT License" }

[project.scripts]
aia = "naas_aia.cli:main"

[project.urls]
Homepage = "https://github.com/jupyter-naas/abi"
Repository = "https://github.com/jupyter-naas/abi/tree/main/libs/naas-aia"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["naas_aia"]
force-include = { "naas_aia/SOUL.md" = "naas_aia/SOUL.md" }

