[package]
name = "siteanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["tokio-native-tls", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
quick-xml = "0.31"
url = "2.4"
serde_json = "1.0"
pyo3 = { version = "0.19", features = ["extension-module"] }
ctrlc = "3.4"
qdrant-client = "1.7.0"
anyhow = "1.0"
scraper = "0.17"
wiremock = "0.6.2"

[lib]
name = "siteanalyzer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "siteanalyzer-cli"
path = "src/main.rs"