[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsr-backend"
version = "0.1.0"
description = "WSR BFO-grounded FastAPI data service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.wsr.run]
# Run with: python -m uvicorn main:app --reload --port 8000
# (use the same python interpreter that has the dependencies installed)

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
