[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# onnxruntime 1.26.0 ships no cp312 macOS wheel; pin it until upstream
# (pymupdf-layout -> pymupdf4llm) loosens or onnxruntime releases the wheel.
override-dependencies = ["onnxruntime<1.26"]


# [tool.uv.sources]
# naas-abi = { path = ".abi/libs/naas-abi",  editable = true }
# naas-abi-core = { path = ".abi/libs/naas-abi-core",  editable = true }
# naas-abi-marketplace = { path = ".abi/libs/naas-abi-marketplace",  editable = true }
# naas-abi-cli = { path = ".abi/libs/naas-abi-cli",  editable = true }